# sdr-for-linux

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  meson.build
.github/workflows/: build.yml
data/: cz.ok1br.sdr_for_linux.desktop  cz.ok1br.sdr_for_linux.desktop.in  cz.ok1br.sdr_for_linux.metainfo.xml  meson.build
docs/: AUDIO-SCOPE.md  BANDPLAN.md  CONTEST-NOTES-2026-07-11.md  ENGINE-IMPORT.md  P1-SCOPE.md  P1-TX-SCOPE.md  P2-RX-SCOPE.md  PS-SCOPE.md  TCI-SCOPE.md  TX-DESIGN.md  TX-SAFETY.md  WDSP-ANALYZER-SCOPE.md
docs/mockups/: README.md  main_window_libadwaita.c  mock_common.h  parametric_eq_libadwaita.c  settings_libadwaita.c
packaging/: PKGBUILD  nfpm.yaml
src/: app_identity.h  audioprobe_main.c  bandplan.c  bandplan.h  client.c  client.h  cw_test.c  discover_main.c  gui.c  micprobe_main.c  p1probe_main.c  p1txprobe_main.c  panadapter.c  panadapter.h  panprobe_main.c  picker.c  picker.h  protocol.c  protocol.h  radio_support.h  render_test.c  rxprobe_main.c  settings.c  settings.h  swr_test.c  tci_server.c  tci_server.h  tci_test.c  transport.c  transport.h  txdsp_test.c  txgate_test.c  txkey_main.c  txprobe_main.c  waterfall.c  waterfall.h  wdsp_smoke.c  wisdom_gate.c  wisdom_gate.h  wisdom_test.c
src/engine/: analyzer.c  analyzer.h  audio.h  audio_pw.c  cw_gen.c  cw_gen.h  demod.c  demod.h  discovery.h  discovery_p1.c  discovery_p2.c  engine_state.c  message.h  mic_pw.c  mic_pw.h  protocol1.c  protocol1.h  protocol2.c  protocol2.h  ps.c  ps.h  tx.c  tx.h  tx_analyzer.c  tx_analyzer.h  tx_gate.c  tx_gate.h  tx_meter.c  tx_meter.h  tx_run.c  tx_run.h
