# Desktop integration: .desktop launcher, scalable icon, AppStream metainfo.
# File names match the GApplication id (cz.ok1br.sdr_for_linux) so Wayland
# associates the window with its icon.
install_data('cz.ok1br.sdr_for_linux.desktop',
  install_dir : get_option('datadir') / 'applications')
install_data('cz.ok1br.sdr_for_linux.svg',
  install_dir : get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps')
install_data('cz.ok1br.sdr_for_linux.metainfo.xml',
  install_dir : get_option('datadir') / 'metainfo')
